# gedcom-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  TROUBLESHOOTING.md  docker-compose.yml  gedcom_server.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-merge.yml  ci.yml  claude-code-review.yml  release.yml
gedcom_server/: __init__.py  __main__.py  associates.py  constants.py  core.py  events.py  helpers.py  mcp_resources.py  mcp_tools.py  models.py  narrative.py  parsing.py  places.py  query.py  semantic.py  sources.py  spatial.py  state.py  telemetry.py
tests/: conftest.py  test_associates.py  test_bulk.py  test_configuration.py  test_edge_cases.py  test_events.py  test_gedcom_server.py  test_helpers.py  test_mcp_resources.py  test_narrative.py  test_new_features.py  test_places.py  test_query.py  test_relationships.py  test_semantic.py  test_sources.py  test_spatial.py  test_telemetry.py
tests/fixtures/: sample.ged  sample.geocache.json
